// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedAuthorShow Component when all publications exist should render content correctly 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="username"
              >
                H. Goldschmidt
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div>
            <div
              className="bioSection"
            />
            <a
              className="contactSection"
              href="mailto:scshinjr@gmail.com"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              >
                <i
                  className="icon emailIcon"
                />
              </span>
              <span>
                scshinjr@gmail.com
              </span>
            </a>
            <a
              className="contactSection"
              href="#"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              />
              <span>
                
              </span>
            </a>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <span
              className="tabNavigationItem"
            >
              PUBLICATIONS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="sectionHeader"
          >
            <span
              className="sectionTitle"
            >
              Selected Publications
            </span>
            <span
              className="countBadge"
            >
              0
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            representative papers selected by the author
          </div>
          <div
            className="noPaperWrapper"
          >
            <i
              className="icon ufoIcon"
            />
            <div
              className="noPaperDescription"
            >
              There is no selected publications.
            </div>
          </div>
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            list of all papers by this author
          </div>
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f9f9fa",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper by keyword"
                  value=""
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of 
                1
                 pages (
                1
                 
                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="noPaperWrapper"
          >
            <div
              className="noPaperDescription"
            >
              There is no publications.
            </div>
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2018 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
    </div>
  </footer>
</div>
`;

exports[`ConnectedAuthorShow Component when there is no all publications should render no publications at the content section 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="username"
              >
                H. Goldschmidt
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div>
            <div
              className="bioSection"
            />
            <a
              className="contactSection"
              href="mailto:scshinjr@gmail.com"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              >
                <i
                  className="icon emailIcon"
                />
              </span>
              <span>
                scshinjr@gmail.com
              </span>
            </a>
            <a
              className="contactSection"
              href="#"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              />
              <span>
                
              </span>
            </a>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <span
              className="tabNavigationItem"
            >
              PUBLICATIONS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="sectionHeader"
          >
            <span
              className="sectionTitle"
            >
              Selected Publications
            </span>
            <span
              className="countBadge"
            >
              0
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            representative papers selected by the author
          </div>
          <div
            className="noPaperWrapper"
          >
            <i
              className="icon ufoIcon"
            />
            <div
              className="noPaperDescription"
            >
              There is no selected publications.
            </div>
          </div>
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            list of all papers by this author
          </div>
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f9f9fa",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper by keyword"
                  value=""
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of 
                1
                 pages (
                1
                 
                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2018 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
    </div>
  </footer>
</div>
`;

exports[`ConnectedAuthorShow Component when try to load all publications should render loading spinner correctly 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="username"
              >
                H. Goldschmidt
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div>
            <div
              className="bioSection"
            />
            <a
              className="contactSection"
              href="mailto:scshinjr@gmail.com"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              >
                <i
                  className="icon emailIcon"
                />
              </span>
              <span>
                scshinjr@gmail.com
              </span>
            </a>
            <a
              className="contactSection"
              href="#"
              target="_blank"
            >
              <span
                className="contactIconWrapper"
              />
              <span>
                
              </span>
            </a>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <span
              className="tabNavigationItem"
            >
              PUBLICATIONS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="sectionHeader"
          >
            <span
              className="sectionTitle"
            >
              Selected Publications
            </span>
            <span
              className="countBadge"
            >
              0
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            representative papers selected by the author
          </div>
          <div
            className="noPaperWrapper"
          >
            <i
              className="icon ufoIcon"
            />
            <div
              className="noPaperDescription"
            >
              There is no selected publications.
            </div>
          </div>
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          >
            list of all papers by this author
          </div>
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f9f9fa",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper by keyword"
                  value=""
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of 
                1
                 pages (
                1
                 
                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="spinner"
            style={
              Object {
                "margin": "170px auto",
              }
            }
          >
            <div
              className="bounce1"
            />
            <div
              className="bounce2"
            />
            <div
              className="bounce3"
            />
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2018 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
    </div>
  </footer>
</div>
`;
